--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
 |/ || \|
    ||
    ||
-  _||_ </div><br>the mononoki project started with the search for a better programming font. I tried every suitable monospace typeface i could get my hands on, but i couldn't find the optimal solution, at least not for me. So it slowly became a small, personal research-project, exploring the typographic needs of code display. I used the following specifications as guidelines:
+  _||_ </div><br>the mononoki project started with the search for a better programming font. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </div>
       <div class="box code">
 <span class="comment"># fizzbuzz!</span>     
@@ -70,7 +70,7 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
  ||
 _||_</div><br>
 retty much a given.<br>
-It's not just an artifact from the early days of computing, but an useful convention that code is set in a monospaced typeface. 
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
       </div>
     </div>
 <div class="wingdings">¶</div>
@@ -92,7 +92,7 @@ It's not just an artifact from the early days of computing, but an useful conven
  ||_// 
  ||\\
 _||_\\_</div><br>
-ight now we are in the transition to high resolution displays. But we're not there yet, and especially with cheap laptops and crappy office-displays this transition will not be accomplished in the foreseeable future. So the glyphs must survive being squashed into a grid of a few pixels, but I still wanted to design them with attention to detail, although it is only visible in print or on retina displays.
+ight now we are in the transition Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </div>
 
      </div>
@@ -111,7 +111,7 @@ ight now we are in the transition to high resolution displays. But we're not the
  ||__ 
  || 
 _||__/|</div><br>
-very character must be clearly distinguishable from similar looking characters. While this seems obvious it comes with costs, like inferior long-text readability and a less consistent appearance. I wanted to reach this goal with minimal tradeoffs.
+very character is clearly distinguishable from similar Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </div>
     </div>
 <div class="wingdings">¶</div>
@@ -124,9 +124,7 @@ very character must be clearly distinguishable from similar looking characters. 
     </div>
 
 
-    <footer>
-        color scheme: solarized —
-        color scheme: solarized —
+    <footer>— color scheme: <a href="http://ethanschoonover.com/solarized">solarized</a> —
     </footer>
 
 
