--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
     <div class="wingdings">¶</div>
 
     <div class="container">
+      <div class="background">([{</div>
+
       <div class="box monospaced-title">
         <span class="accent">m</span>o<span class="accent">n</span>o<span class="accent">s</span>p<span class="accent">a</span>c<span class="accent">e</span>
       </div>
@@ -76,8 +78,9 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 <div class="wingdings">¶</div>
 
     <div class="container">
+      <div class="background">&g<span class="italic">g</span></div>
+
       <div class="box resolution-title">
-        <div class="g">g</div>
         <span class="italic">must work well on</span> 
         <div class="high">high</div> 
         <span class="italic">and</span>
@@ -100,6 +103,8 @@ ight now we are in the transition Lorem ipsum dolor sit amet, consetetur sadipsc
 <div class="wingdings">¶</div>
 
     <div class="container">
+      <div class="background">!?:;%$§</div>
+
       <div class="box align-right">
         <div class="italic">differentiation of characters</div>
         <div class="big">|1lI B8 CDO0 </div>
