try to come up with some text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>title</title>
+    <title>mononoki</title>
   <link rel="stylesheet" href="style.css" type="text/css">
   <script type="text/javascript">
    var _gaq = _gaq || [];
@@ -35,11 +35,11 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
     </div>
     <div class="container">
       <div class="box">
-        <div class="dropcap">________ 
-|/ || \|
-   ||
-   ||
-  _||_ </div><br>the mononoki project started with the search for a better programming font. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+        <div class="dropcap">___      ___ 
+ |\\    /||
+ | \\  / ||
+ |  \\/  ||
+_|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to enchance code formatting. 
       </div>
       <div class="box code">
 <span class="comment"># fizzbuzz!</span>     
