--- a/index.html
+++ b/index.html
@@ -33,23 +33,33 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
 
       </div>
     </div>
+
+    <div class="container">
+      <div class="box">
+        <a href="https://github.com/madmalik/mononoki/tree/master">View on github</a>
+      </div>
+      <div class="box">    
+        <a href="https://github.com/madmalik/mononoki/blob/master/export/mononoki.zip">Download</a>
+      </div>
+    </div>
     <div class="container">
       <div class="box">
         <div class="dropcap">___      ___ 
  |\\    /||
  | \\  / ||
  |  \\/  ||
-_|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to enchance code formatting. 
+_|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to enchance code formatting.<br>
+
       </div>
       <div class="box code">
-<span class="comment"># fizzbuzz!</span>     
+<span class="comment"># how to ace an interview</span>     
 <span class="keyword">for</span> i <span class="keyword">in</span> xrange(1, 101)<span class="op">:</span>
     <span class="keyword">if</span> i <span class="op">%</span> 15 <span class="op">==</span> 0<span class="op">:</span>
-        <span class="keyword">print</span> <span class="string">"FizzBuzz"</span>
+        <span class="keyword">print</span> <span class="string">"mononoki"</span>
     <span class="keyword">elif</span> i <span class="op">%</span> 3 <span class="op">==</span> 0<span class="op">:</span>
-        <span class="keyword">print</span> <span class="string">"Fizz"</span>
+        <span class="keyword">print</span> <span class="string">"mono"</span>
     <span class="keyword">elif</span> i <span class="op">%</span> 5 <span class="op">==</span> 0<span class="op">:</span>
-        <span class="keyword">print</span> <span class="string">"Buzz"</span>
+        <span class="keyword">print</span> <span class="string">"noki"</span>
     <span class="keyword">else</span><span class="op">:</span>
         <span class="keyword">print</span> i
       </div>
@@ -66,13 +76,14 @@ _|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to encha
       </div>
 
       <div class="box">
-        <div class="dropcap">____
- || \\ 
- ||_// 
- ||
-_||_</div><br>
-retty much a given.<br>
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+        <div class="dropcap">________  
+|/ || \| 
+   || 
+   ||
+  _||_</div><br>
+his is an universal requirement for source code typography. <br>
+It's not just an historic artifact from the olden days of terminals, but an useful convention to allow 
+two dimensional structuring and highlighting differences on the character level.<br>
       </div>
     </div>
 <div class="wingdings">¶</div>
@@ -81,7 +92,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
       <div class="background">&g<span class="italic">g</span></div>
 
       <div class="box resolution-title">
-        <span class="italic">must work well on</span> 
+        <span class="italic">works well on</span> 
         <div class="high">high</div> 
         <span class="italic">and</span>
         <div><img src="low.png" alt="low" height="45"></div>
@@ -94,7 +105,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
  || \\ 
  ||_// 
  ||\\
-_||_\\_</div><br>
+_||_\\_ </div><br>
 ight now we are in the transition Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </div>
 
