fix typo in homepage
s/enchance/enhance/

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
  |\\    /||
  | \\  / ||
  |  \\/  ||
-_|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to enchance code formatting.<br>
+_|_  '  _||_</div><br>ononoki is a typeface by Matthias Tellen, created to enhance code formatting.<br>
 
       </div>
       <div class="box code">
