--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
   </script>
   </head>
   <body>
+    <div class="align-right">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
+      </form>
+    </div>
+
+
     <div class="headline">
       <div class="asciiart">
 ___      ___    __    ___  ___    __    ___  ___    __    ____ __  ____
@@ -30,6 +40,8 @@ ___      ___    __    ___  ___    __    ___  ___    __    ____ __  ____
 _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
 
 <span class="italic">    a font for programming and code review</span>
+
+
 
       </div>
     </div>
