updated upload link to github releases

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ _|_  '  _||_  \\__//  _|_  \|   \\__//  _|_  \|   \\__//  _||_ \\_ _||_
         <a href="https://github.com/madmalik/mononoki/tree/master">View on github</a>
       </div>
       <div class="box">
-        <a href="https://github.com/madmalik/mononoki/blob/master/export/mononoki.zip">Download</a>
+        <a href="https://github.com/madmalik/mononoki/releases/download/1.0/mononoki.zip">Download</a>
       </div>
     </div>
     <div class="container">
