--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
       <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
       </form>
+      <span class="italic">mononiki is free, but tips are appreciated ;)</span>
     </div>
 
 
