--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@ very character is clearly distinguishable from similar looking characters. While
       </div>
     </div>
 <div class="wingdings">¶</div>
-    <div class="align-center orange">
+    <div class="donation orange">
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
       <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
       </form>
+      <br>
       <span class="italic">mononoki is free, but tips are appreciated</span> ;)
 
     </div>
