--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@ very character is clearly distinguishable from similar looking characters. While
       </div>
     </div>
 <div class="wingdings">¶</div>
+
     <div class="donation orange">
+      <div class="small-headline">
+        <span class="italic">mononoki is free, but tips are appreciated</span> ;)
+      </div>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
@@ -120,8 +124,8 @@ very character is clearly distinguishable from similar looking characters. While
       <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
       </form>
       <br>
-      <span class="italic">mononoki is free, but tips are appreciated</span> ;)
-
+      <a href="https://www.paypal.me/madmalik" class="center">paypal.me/madmalik</a>
+     
     </div>
 
 <div class="wingdings">¶</div>
