--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ very character is clearly distinguishable from similar looking characters. While
 
     <div class="donation orange">
       <div class="small-headline">
-        <span class="italic">mononoki is free, but tips are appreciated</span> ;)
+        <span class="italic">mononoki is free, but tips are appreciated</span>
       </div>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
