--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
       <div class="box">
-        <a href="https://github.com/madmalik/mononoki/tree/master">View on GitHub</a>
+        <a href="https://github.com/madmalik/mononoki/tree/main">View on GitHub</a>
       </div>
       <div class="box">
         <a href="https://github.com/madmalik/mononoki/releases/download/1.3/mononoki.zip">Download</a>
@@ -115,7 +115,7 @@ very character is clearly distinguishable from similar looking characters. While
 
     <div class="donation orange">
       <div class="small-headline">
-        <span class="italic">mononoki is free, but tips are appreciated</span>
+        <span class="italic">mononoki is free, but if you want you can tip</span>
       </div>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
