--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
   </div>
   <div class="container">
     <div class="box">
-      <div class="dropcap">___ ___
-        |\\ /||
-        | \\ / ||
-        | \\/ ||
-        _|_ ' _||_ </div><br>ononoki is a typeface by Matthias Tellen, created to enhance code formatting.<br>
+      <div class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
+        &nbsp;|\\&nbsp;&nbsp;&nbsp;&nbsp;/||<br>
+        &nbsp;|&nbsp;\\&nbsp;&nbsp;/&nbsp;||<br>
+        &nbsp;|&nbsp;&nbsp;\\/&nbsp;&nbsp;||<br>
+        _|_&nbsp;&nbsp;'&nbsp;&nbsp;_||_&nbsp;
+      </div><br>ononoki is a typeface by Matthias Tellen, created to enhance code formatting.<br>
 
     </div>
     <div class="box code">
@@ -61,11 +62,11 @@
     </div>
 
     <div class="box">
-      <div class="dropcap">________
-        |/ || \|
-        ||
-        ||
-        _||_ </div><br>
+      <div class="dropcap">________<br>
+        |/&nbsp;||&nbsp;\|&nbsp;<br>
+        &nbsp;&nbsp;&nbsp;||<br>
+        &nbsp;&nbsp;&nbsp;||<br>
+        &nbsp;&nbsp;_||_</div><br>
       his is a universal requirement for source code typography. <br>
       It's not just a historic artifact from the olden days of terminals, but a useful convention to allow
       two dimensional structuring and highlighting differences on the character level.<br>
@@ -86,11 +87,11 @@
 
     </div>
     <div class="box">
-      <div class="dropcap">____
-        || \\
-        ||_//
-        ||\\
-        _||_\\_ </div><br>
+      <div class="dropcap">_____<br>
+        &nbsp;||&nbsp;\\<br>
+        &nbsp;||_//<br>
+        &nbsp;||\\<br>
+        _||_\\_&nbsp;</div><br>
       ight now we are in the transition to high resolution displays, bringing font rendering quality on screen to the
       realms of print quality. But we're not there yet, and especially on cheap laptops and typical office displays this
       transition will not be accomplished in the foreseeable future. So the glyphs must survive being squashed into a
@@ -111,11 +112,11 @@
     </div>
 
     <div class="box">
-      <div class="dropcap">_______
-        || \|
-        ||__
-        ||
-        _||__/| </div><br>
+      <div class="dropcap">_______<br>
+        &nbsp;||&nbsp;&nbsp;\|<br>
+        &nbsp;||__<br>
+        &nbsp;||<br>
+        _||__/|&nbsp;</div><br>
       very character is clearly distinguishable from similar looking characters. While this seems obvious, it comes with
       costs, like inferior long-text readability and a less consistent appearance. I wanted to reach this goal with
       minimal tradeoffs.
