new python example + fix code whitespace

--- a/index.html
+++ b/index.html
@@ -34,19 +34,20 @@
 
     </div>
     <div class="box code">
-      <span class="comment"># how to ace an interview</span>
-      <span class="keyword">for</span> i <span class="keyword">in</span> xrange(1, 101)<span class="op">:</span>
-      <span class="keyword">if</span> i <span class="op">%</span> 15 <span class="op">==</span> 0<span
-        class="op">:</span>
-      <span class="keyword">print</span> <span class="string">"mononoki"</span>
-      <span class="keyword">elif</span> i <span class="op">%</span> 3 <span class="op">==</span> 0<span
-        class="op">:</span>
-      <span class="keyword">print</span> <span class="string">"mono"</span>
-      <span class="keyword">elif</span> i <span class="op">%</span> 5 <span class="op">==</span> 0<span
-        class="op">:</span>
-      <span class="keyword">print</span> <span class="string">"noki"</span>
-      <span class="keyword">else</span><span class="op">:</span>
-      <span class="keyword">print</span> i
+      <span class="comment"># how to ace an interview</span><br>
+      <span class="keyword">for</span> i <span class="keyword">in</span> range(1, 51)<span class="op">:</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">=</span> <span class="string">&apos;&apos;</span><span
+        class="op">:</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 3 <span class="op">==</span>
+      0<span class="op">:</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
+        class="string">&apos;mono&apos;</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 5 <span class="op">==</span>
+      0<span class="op">:</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
+        class="string">&apos;noki&apos;</span><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">print(</span>s <span class="keyword">or</span> i<span
+        class="keyword">)</span><br>
     </div>
   </div>
 
