--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </div>
 
   <div class="container">
-    <div class="box">
+    <div class="box centered">
       <a href="https://github.com/madmalik/mononoki/tree/main">View on GitHub</a>
     </div>
-    <div class="box">
+    <div class="box centered">
       <a href="https://github.com/madmalik/mononoki/releases/download/1.4/mononoki.zip">Download</a>
     </div>
   </div>
