swap code example and text for consistency

--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
       <a href="https://github.com/madmalik/mononoki/releases/download/1.4/mononoki.zip">Download</a>
     </div>
   </div>
+
+  <div class="wingdings">¶</div>
   <div class="container">
+    <div class="box">
+      <div class="code">
+        <span class="comment"># how to ace an interview</span><br>
+        <span class="keyword">for</span> i <span class="keyword">in</span> range(1, 51)<span class="op">:</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">=</span> <span class="string">&apos;&apos;</span><span
+          class="op">:</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 3 <span class="op">==</span>
+        0<span class="op">:</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
+          class="string">&apos;mono&apos;</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 5 <span class="op">==</span>
+        0<span class="op">:</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
+          class="string">&apos;noki&apos;</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">print(</span>s <span class="keyword">or</span> i<span
+          class="keyword">)</span><br>
+      </div>
+    </div>
     <div class="box">
       <div class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
         &nbsp;|\\&nbsp;&nbsp;&nbsp;&nbsp;/||<br>
@@ -31,23 +51,6 @@
         &nbsp;|&nbsp;&nbsp;\\/&nbsp;&nbsp;||<br>
         _|_&nbsp;&nbsp;'&nbsp;&nbsp;_||_&nbsp;
       </div><br>ononoki is a typeface by Matthias Tellen, created to enhance code formatting.<br>
-
-    </div>
-    <div class="box code">
-      <span class="comment"># how to ace an interview</span><br>
-      <span class="keyword">for</span> i <span class="keyword">in</span> range(1, 51)<span class="op">:</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">=</span> <span class="string">&apos;&apos;</span><span
-        class="op">:</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 3 <span class="op">==</span>
-      0<span class="op">:</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
-        class="string">&apos;mono&apos;</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 5 <span class="op">==</span>
-      0<span class="op">:</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
-        class="string">&apos;noki&apos;</span><br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">print(</span>s <span class="keyword">or</span> i<span
-        class="keyword">)</span><br>
     </div>
   </div>
 
