--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="background">!?:;%$§</div>
+    <div class="background">!?:;</div>
 
     <div class="box align-right">
       <div class="italic">differentiation of characters</div>
@@ -128,20 +128,23 @@
   </div>
   <div class="wingdings">¶</div>
 
-  <div class="donation orange">
-    <div class="small-headline">
-      <span class="italic">mononoki is free, but if you want you can tip</span>
-    </div>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit"
-        alt="PayPal - The safer, easier way to pay online!">
-      <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
-    </form>
-    <br>
-    <a href="https://www.paypal.me/madmalik" class="center">paypal.me/madmalik</a>
+  <div class="container">
+    <div class="background">%$§</div>
+    <div class="box donation orange">
+      <div class="small-headline">
+        <span class="italic">mononoki is free, but if you want you can tip</span>
+      </div>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit"
+          alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
+      </form>
+      <br>
+      <a href="https://www.paypal.me/madmalik" class="center">paypal.me/madmalik</a>
 
+    </div>
   </div>
 
   <div class="wingdings">¶</div>
