--- a/index.html
+++ b/index.html
@@ -132,18 +132,10 @@
     <div class="background">%$§</div>
     <div class="box donation orange">
       <div class="small-headline">
-        <span class="italic">mononoki is free, but if you want you can tip</span>
+        <span class="italic">mononoki is a free font developed as a passion project in my spare time, but if you enjoy
+          my work and would like to leave a tip, here is my
+          <a href="https://www.paypal.com/donate/?hosted_button_id=SPNWPX4ZB7ASY" target="_blank">tip jar</a>!</span>
       </div>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="BN8L7M44XK866">
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit"
-          alt="PayPal - The safer, easier way to pay online!">
-        <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
-      </form>
-      <br>
-      <a href="https://www.paypal.me/madmalik" class="center">paypal.me/madmalik</a>
-
     </div>
   </div>
 
