open solarized link in new tab

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </div>
 
 
-  <footer>-- color scheme: <a href="http://ethanschoonover.com/solarized">solarized</a> --
+  <footer>-- color scheme: <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
   </footer>
 
 
