updated character list + formatting + title

--- a/index.html
+++ b/index.html
@@ -141,16 +141,97 @@
 
   <div class="wingdings">¶</div>
 
-  <div class="showcase">
-    &#65;<wbr>&#193;<wbr>&#258;<wbr>&#194;<wbr>&#196;<wbr>&#192;<wbr>&#256;<wbr>&#260;<wbr>&#197;<wbr>&#195;<wbr>&#198;<wbr>&#66;<wbr>&#67;<wbr>&#262;<wbr>&#268;<wbr>&#199;<wbr>&#264;<wbr>&#68;<wbr>&#208;<wbr>&#270;<wbr>&#272;<wbr>&#69;<wbr>&#201;<wbr>&#282;<wbr>&#202;<wbr>&#203;<wbr>&#278;<wbr>&#200;<wbr>&#274;<wbr>&#280;<wbr>&#70;<wbr>&#71;<wbr>&#284;<wbr>&#72;<wbr>&#292;<wbr>&#73;<wbr>&#306;<wbr>&#205;<wbr>&#206;<wbr>&#207;<wbr>&#204;<wbr>&#298;<wbr>&#302;<wbr>&#74;<wbr>&#308;<wbr>&#75;<wbr>&#76;<wbr>&#313;<wbr>&#317;<wbr>&#319;<wbr>&#321;<wbr>&#77;<wbr>&#78;<wbr>&#323;<wbr>&#327;<wbr>&#209;<wbr>&#79;<wbr>&#211;<wbr>&#212;<wbr>&#214;<wbr>&#210;<wbr>&#336;<wbr>&#332;<wbr>&#216;<wbr>&#213;<wbr>&#338;<wbr>&#80;<wbr>&#222;<wbr>&#81;<wbr>&#82;<wbr>&#340;<wbr>&#344;<wbr>&#83;<wbr>&#346;<wbr>&#352;<wbr>&#350;<wbr>&#348;<wbr>&#84;<wbr>&#358;<wbr>&#356;<wbr>&#85;<wbr>&#218;<wbr>&#364;<wbr>&#219;<wbr>&#220;<wbr>&#217;<wbr>&#368;<wbr>&#362;<wbr>&#370;<wbr>&#366;<wbr>&#86;<wbr>&#87;<wbr>&#7810;<wbr>&#372;<wbr>&#7812;<wbr>&#7808;<wbr>&#88;<wbr>&#89;<wbr>&#221;<wbr>&#374;<wbr>&#376;<wbr>&#7922;<wbr>&#90;<wbr>&#377;<wbr>&#381;<wbr>&#379;<wbr>&#354;<wbr>&#97;<wbr>&#225;<wbr>&#259;<wbr>&#226;<wbr>&#228;<wbr>&#224;<wbr>&#257;<wbr>&#261;<wbr>&#229;<wbr>&#227;<wbr>&#230;<wbr>&#98;<wbr>&#99;<wbr>&#263;<wbr>&#269;<wbr>&#231;<wbr>&#265;<wbr>&#100;<wbr>&#240;<wbr>&#271;<wbr>&#273;<wbr>&#101;<wbr>&#233;<wbr>&#283;<wbr>&#234;<wbr>&#235;<wbr>&#279;<wbr>&#232;<wbr>&#275;<wbr>&#281;<wbr>&#102;<wbr>&#103;<wbr>&#285;<wbr>&#104;<wbr>&#293;<wbr>&#105;<wbr>&#305;<wbr>&#237;<wbr>&#238;<wbr>&#239;<wbr>&#236;<wbr>&#307;<wbr>&#299;<wbr>&#303;<wbr>&#106;<wbr>&#567;<wbr>&#309;<wbr>&#107;<wbr>&#108;<wbr>&#314;<wbr>&#318;<wbr>&#320;<wbr>&#322;<wbr>&#109;<wbr>&#110;<wbr>&#324;<wbr>&#328;<wbr>&#241;<wbr>&#111;<wbr>&#243;<wbr>&#244;<wbr>&#246;<wbr>&#242;<wbr>&#337;<wbr>&#333;<wbr>&#248;<wbr>&#245;<wbr>&#339;<wbr>&#112;<wbr>&#254;<wbr>&#113;<wbr>&#114;<wbr>&#341;<wbr>&#345;<wbr>&#115;<wbr>&#347;<wbr>&#353;<wbr>&#351;<wbr>&#349;<wbr>&#223;<wbr>&#116;<wbr>&#359;<wbr>&#357;<wbr>&#117;<wbr>&#250;<wbr>&#365;<wbr>&#251;<wbr>&#252;<wbr>&#249;<wbr>&#369;<wbr>&#363;<wbr>&#355;<wbr>&#371;<wbr>&#367;<wbr>&#118;<wbr>&#119;<wbr>&#7811;<wbr>&#373;<wbr>&#7813;<wbr>&#7809;<wbr>&#120;<wbr>&#121;<wbr>&#253;<wbr>&#375;<wbr>&#255;<wbr>&#7923;<wbr>&#122;<wbr>&#378;<wbr>&#382;<wbr>&#380;<wbr>&#170;<wbr>&#186;<wbr>&#1040;<wbr>&#1041;<wbr>&#1042;<wbr>&#1043;<wbr>&#1027;<wbr>&#1044;<wbr>&#1045;<wbr>&#1025;<wbr>&#1046;<wbr>&#1047;<wbr>&#1048;<wbr>&#1049;<wbr>&#1050;<wbr>&#1036;<wbr>&#1051;<wbr>&#1052;<wbr>&#1053;<wbr>&#1054;<wbr>&#1055;<wbr>&#1056;<wbr>&#1057;<wbr>&#1058;<wbr>&#1059;<wbr>&#1060;<wbr>&#1061;<wbr>&#1063;<wbr>&#1062;<wbr>&#1064;<wbr>&#1065;<wbr>&#1068;<wbr>&#1066;<wbr>&#1067;<wbr>&#1029;<wbr>&#1069;<wbr>&#1030;<wbr>&#1031;<wbr>&#1032;<wbr>&#1070;<wbr>&#1071;<wbr>&#1216;<wbr>&#1250;<wbr>&#1262;<wbr>&#1072;<wbr>&#1073;<wbr>&#1074;<wbr>&#1075;<wbr>&#1107;<wbr>&#1076;<wbr>&#1077;<wbr>&#1105;<wbr>&#1078;<wbr>&#1079;<wbr>&#1080;<wbr>&#1081;<wbr>&#1082;<wbr>&#1116;<wbr>&#1083;<wbr>&#1084;<wbr>&#1085;<wbr>&#1086;<wbr>&#1087;<wbr>&#1088;<wbr>&#1089;<wbr>&#1090;<wbr>&#1091;<wbr>&#1092;<wbr>&#1093;<wbr>&#1095;<wbr>&#1094;<wbr>&#1096;<wbr>&#1097;<wbr>&#1100;<wbr>&#1098;<wbr>&#1099;<wbr>&#1109;<wbr>&#1101;<wbr>&#1110;<wbr>&#1112;<wbr>&#1102;<wbr>&#1103;<wbr>&#1211;<wbr>&#1251;<wbr>&#1263;<wbr>&#913;<wbr>&#914;<wbr>&#915;<wbr>&#916;<wbr>&#917;<wbr>&#918;<wbr>&#919;<wbr>&#920;<wbr>&#921;<wbr>&#922;<wbr>&#923;<wbr>&#924;<wbr>&#925;<wbr>&#926;<wbr>&#927;<wbr>&#928;<wbr>&#929;<wbr>&#931;<wbr>&#932;<wbr>&#933;<wbr>&#934;<wbr>&#935;<wbr>&#936;<wbr>&#937;<wbr>&#945;<wbr>&#946;<wbr>&#947;<wbr>&#948;<wbr>&#949;<wbr>&#950;<wbr>&#951;<wbr>&#952;<wbr>&#953;<wbr>&#954;<wbr>&#955;<wbr>&#956;<wbr>&#957;<wbr>&#958;<wbr>&#959;<wbr>&#960;<wbr>&#961;<wbr>&#963;<wbr>&#964;<wbr>&#965;<wbr>&#966;<wbr>&#967;<wbr>&#968;<wbr>&#969;<wbr>&#48;<wbr>&#49;<wbr>&#50;<wbr>&#51;<wbr>&#52;<wbr>&#53;<wbr>&#54;<wbr>&#55;<wbr>&#56;<wbr>&#57;<wbr>&#8260;<wbr>&#8543;<wbr>&#189;<wbr>&#8585;<wbr>&#8531;<wbr>&#8532;<wbr>&#188;<wbr>&#190;<wbr>&#8533;<wbr>&#8534;<wbr>&#8535;<wbr>&#8536;<wbr>&#8537;<wbr>&#8538;<wbr>&#8528;<wbr>&#8539;<wbr>&#8540;<wbr>&#8541;<wbr>&#8542;<wbr>&#8529;<wbr>&#8530;<wbr>&#42;<wbr>&#92;<wbr>&#183;<wbr>&#8226;<wbr>&#58;<wbr>&#44;<wbr>&#8230;<wbr>&#33;<wbr>&#8252;<wbr>&#161;<wbr>&#35;<wbr>&#8228;<wbr>&#46;<wbr>&#63;<wbr>&#191;<wbr>&#34;<wbr>&#39;<wbr>&#59;<wbr>&#47;<wbr>&#8229;<wbr>&#95;<wbr>&#123;<wbr>&#125;<wbr>&#91;<wbr>&#93;<wbr>&#40;<wbr>&#41;<wbr>&#8212;<wbr>&#8211;<wbr>&#45;<wbr>&#171;<wbr>&#187;<wbr>&#8249;<wbr>&#8250;<wbr>&#8222;<wbr>&#8220;<wbr>&#8221;<wbr>&#8216;<wbr>&#8219;<wbr>&#8217;<wbr>&#8218;<wbr>&#8287;<wbr>&#6158;<wbr>&#160;<wbr>&#8192;<wbr>&#8193;<wbr>&#8194;<wbr>&#8195;<wbr>&#8196;<wbr>&#8197;<wbr>&#8198;<wbr>&#8199;<wbr>&#8200;<wbr>&#8201;<wbr>&#8202;<wbr>&#8203;<wbr>&#8239;<wbr>&#65279;<wbr>&#8364;<wbr>&#162;<wbr>&#164;<wbr>&#36;<wbr>&#402;<wbr>&#163;<wbr>&#165;<wbr>&#8801;<wbr>&#43;<wbr>&#8722;<wbr>&#215;<wbr>&#247;<wbr>&#61;<wbr>&#8800;<wbr>&#62;<wbr>&#60;<wbr>&#8805;<wbr>&#8804;<wbr>&#177;<wbr>&#8776;<wbr>&#126;<wbr>&#172;<wbr>&#8709;<wbr>&#8734;<wbr>&#8747;<wbr>&#8710;<wbr>&#8719;<wbr>&#8721;<wbr>&#8730;<wbr>&#8706;<wbr>&#181;<wbr>&#37;<wbr>&#8240;<wbr>&#8756;<wbr>&#8725;<wbr>&#8729;<wbr>&#9601;<wbr>&#9602;<wbr>&#9603;<wbr>&#9604;<wbr>&#9605;<wbr>&#9606;<wbr>&#9607;<wbr>&#9608;<wbr>&#9600;<wbr>&#9620;<wbr>&#9615;<wbr>&#9614;<wbr>&#9613;<wbr>&#9612;<wbr>&#9611;<wbr>&#9610;<wbr>&#9609;<wbr>&#9616;<wbr>&#9621;<wbr>&#9622;<wbr>&#9623;<wbr>&#9624;<wbr>&#9625;<wbr>&#9626;<wbr>&#9627;<wbr>&#9628;<wbr>&#9629;<wbr>&#9630;<wbr>&#9631;<wbr>&#9617;<wbr>&#9618;<wbr>&#9619;<wbr>&#9473;<wbr>&#9474;<wbr>&#9475;<wbr>&#9476;<wbr>&#9477;<wbr>&#9478;<wbr>&#9479;<wbr>&#9480;<wbr>&#9481;<wbr>&#9482;<wbr>&#9483;<wbr>&#9484;<wbr>&#9485;<wbr>&#9486;<wbr>&#9487;<wbr>&#9488;<wbr>&#9489;<wbr>&#9490;<wbr>&#9491;<wbr>&#9492;<wbr>&#9493;<wbr>&#9494;<wbr>&#9495;<wbr>&#9496;<wbr>&#9497;<wbr>&#9498;<wbr>&#9499;<wbr>&#9500;<wbr>&#9501;<wbr>&#9502;<wbr>&#9503;<wbr>&#9504;<wbr>&#9505;<wbr>&#9506;<wbr>&#9507;<wbr>&#9508;<wbr>&#9509;<wbr>&#9510;<wbr>&#9511;<wbr>&#9512;<wbr>&#9513;<wbr>&#9514;<wbr>&#9515;<wbr>&#9516;<wbr>&#9517;<wbr>&#9518;<wbr>&#9519;<wbr>&#9520;<wbr>&#9521;<wbr>&#9522;<wbr>&#9523;<wbr>&#9524;<wbr>&#9525;<wbr>&#9526;<wbr>&#9527;<wbr>&#9528;<wbr>&#9529;<wbr>&#9530;<wbr>&#9531;<wbr>&#9532;<wbr>&#9533;<wbr>&#9534;<wbr>&#9535;<wbr>&#9536;<wbr>&#9537;<wbr>&#9538;<wbr>&#9539;<wbr>&#9540;<wbr>&#9541;<wbr>&#9542;<wbr>&#9543;<wbr>&#9544;<wbr>&#9545;<wbr>&#9546;<wbr>&#9547;<wbr>&#9548;<wbr>&#9549;<wbr>&#9550;<wbr>&#9551;<wbr>&#9552;<wbr>&#9553;<wbr>&#9554;<wbr>&#9555;<wbr>&#9556;<wbr>&#9557;<wbr>&#9558;<wbr>&#9559;<wbr>&#9560;<wbr>&#9561;<wbr>&#9562;<wbr>&#9563;<wbr>&#9564;<wbr>&#9565;<wbr>&#9566;<wbr>&#9567;<wbr>&#9568;<wbr>&#9569;<wbr>&#9570;<wbr>&#9571;<wbr>&#9572;<wbr>&#9573;<wbr>&#9574;<wbr>&#9575;<wbr>&#9576;<wbr>&#9577;<wbr>&#9578;<wbr>&#9579;<wbr>&#9580;<wbr>&#9581;<wbr>&#9582;<wbr>&#9583;<wbr>&#9584;<wbr>&#9585;<wbr>&#9586;<wbr>&#9587;<wbr>&#9588;<wbr>&#9589;<wbr>&#9590;<wbr>&#9591;<wbr>&#9592;<wbr>&#9593;<wbr>&#9594;<wbr>&#9595;<wbr>&#9596;<wbr>&#9597;<wbr>&#9598;<wbr>&#9599;<wbr>&#9829;<wbr>&#64;<wbr>&#38;<wbr>&#182;<wbr>&#167;<wbr>&#169;<wbr>&#174;<wbr>&#8482;<wbr>&#176;<wbr>&#124;<wbr>&#166;<wbr>&#8224;<wbr>&#8467;<wbr>&#8225;<wbr>&#94;<wbr>&#803;<wbr>&#180;<wbr>&#728;<wbr>&#711;<wbr>&#184;<wbr>&#710;<wbr>&#168;<wbr>&#729;<wbr>&#96;<wbr>&#733;<wbr>&#175;<wbr>&#731;<wbr>&#730;<wbr>&#732;<wbr>&#57504;<wbr>&#57505;<wbr>&#57506;<wbr>&#57520;<wbr>&#57521;<wbr>&#57522;<wbr>&#57523;<wbr><wbr><wbr><wbr><wbr><wbr><wbr><wbr>
+  <div>
+    <div class="showcase-title">All characters contained in mononoki</div>
+    <div class="showcase">
+      &#x0041; &#x00C1; &#x0102; &#x00C2; &#x00C4; &#x00C0; &#x0100; &#x0104; &#x00C5;
+      &#x00C3; &#x00C6; &#x0042; &#x0043; &#x0106; &#x010C; &#x00C7; &#x0108; &#x0044;
+      &#x00D0; &#x010E; &#x0110; &#x0045; &#x00C9; &#x011A; &#x00CA; &#x00CB; &#x0116;
+      &#x00C8; &#x0112; &#x0118; &#x0046; &#x0047; &#x011C; &#x0048; &#x0124; &#x0049;
+      &#x0132; &#x00CD; &#x00CE; &#x00CF; &#x00CC; &#x012A; &#x012E; &#x004A; &#x0134;
+      &#x004B; &#x004C; &#x0139; &#x013D; &#x013F; &#x0141; &#x004D; &#x004E; &#x0143;
+      &#x0147; &#x00D1; &#x004F; &#x00D3; &#x00D4; &#x00D6; &#x00D2; &#x0150; &#x014C;
+      &#x00D8; &#x00D5; &#x0152; &#x0050; &#x00DE; &#x0051; &#x0052; &#x0154; &#x0158;
+      &#x0053; &#x015A; &#x0160; &#x015E; &#x015C; &#x1E9E; &#x0054; &#x0166; &#x0164;
+      &#x0162; &#x0055; &#x00DA; &#x016C; &#x00DB; &#x00DC; &#x00D9; &#x0170; &#x016A;
+      &#x0172; &#x016E; &#x0056; &#x0057; &#x1E82; &#x0174; &#x1E84; &#x1E80; &#x0058;
+      &#x0059; &#x00DD; &#x0176; &#x0178; &#x1EF2; &#x005A; &#x0179; &#x017D; &#x017B;
+      &#x0061; &#x00E1; &#x0103; &#x00E2; &#x00E4; &#x00E0; &#x0101; &#x0105; &#x00E5;
+      &#x00E3; &#x00E6; &#x0062; &#x0063; &#x0107; &#x010D; &#x00E7; &#x0109; &#x0064;
+      &#x00F0; &#x010F; &#x0111; &#x0065; &#x00E9; &#x011B; &#x00EA; &#x00EB; &#x0117;
+      &#x00E8; &#x0113; &#x0119; &#x0066; &#x0067; &#x011D; &#x0068; &#x0125; &#x0069;
+      &#x0131; &#x00ED; &#x00EE; &#x00EF; &#x00EC; &#x0133; &#x012B; &#x012F; &#x006A;
+      &#x0237; &#x0135; &#x006B; &#x006C; &#x013A; &#x019B; &#x013E; &#x0140; &#x0142;
+      &#x006D; &#x006E; &#x0144; &#x0148; &#x00F1; &#x006F; &#x00F3; &#x00F4; &#x00F6;
+      &#x00F2; &#x0151; &#x014D; &#x00F8; &#x00F5; &#x0153; &#x0070; &#x00FE; &#x0071;
+      &#x0072; &#x0155; &#x0159; &#x0073; &#x015B; &#x0161; &#x015F; &#x015D; &#x00DF;
+      &#x0074; &#x0167; &#x0165; &#x0163; &#x0075; &#x00FA; &#x016D; &#x00FB; &#x00FC;
+      &#x00F9; &#x0171; &#x016B; &#x0173; &#x016F; &#x0076; &#x0077; &#x1E83; &#x0175;
+      &#x1E85; &#x1E81; &#x0078; &#x0079; &#x00FD; &#x0177; &#x00FF; &#x1EF3; &#x007A;
+      &#x017A; &#x017E; &#x017C; &#x1D62; &#x02E1; &#x207F; &#x02B3; &#x00AA; &#x00BA;
+      &#x0410; &#x0411; &#x0412; &#x0413; &#x0403; &#x0414; &#x0415; &#x0401; &#x0416;
+      &#x0417; &#x0418; &#x0419; &#x041A; &#x040C; &#x041B; &#x041C; &#x041D; &#x041E;
+      &#x041F; &#x0420; &#x0421; &#x0422; &#x0423; &#x0424; &#x0425; &#x0427; &#x0426;
+      &#x0428; &#x0429; &#x042C; &#x042B; &#x042A; &#x0405; &#x042D; &#x0406; &#x0407;
+      &#x0408; &#x042E; &#x042F; &#x04C0; &#x04E2; &#x04EE; &#x0430; &#x0431; &#x0432;
+      &#x0433; &#x0453; &#x0434; &#x0435; &#x0451; &#x0436; &#x0437; &#x0438; &#x0439;
+      &#x043A; &#x045C; &#x043B; &#x043C; &#x043D; &#x043E; &#x043F; &#x0440; &#x0441;
+      &#x0442; &#x0443; &#x0444; &#x0445; &#x0447; &#x0446; &#x0448; &#x0449; &#x044C;
+      &#x044B; &#x044A; &#x0455; &#x044D; &#x0456; &#x0458; &#x044E; &#x044F; &#x04BB;
+      &#x04E3; &#x04EF; &#x0391; &#x0392; &#x0393; &#x0394; &#x0395; &#x0396; &#x0397;
+      &#x0398; &#x0399; &#x039A; &#x039B; &#x039C; &#x039D; &#x039E; &#x039F; &#x03A0;
+      &#x03A1; &#x03A3; &#x03A4; &#x03A5; &#x03A6; &#x03A7; &#x03A8; &#x03A9; &#x03B1;
+      &#x03B2; &#x03B3; &#x03B4; &#x03B5; &#x03B6; &#x03B7; &#x03B8; &#x03B9; &#x03BA;
+      &#x03BB; &#x03BC; &#x03BD; &#x03BE; &#x03BF; &#x03C0; &#x03C1; &#x03C3; &#x03C4;
+      &#x03C5; &#x03C6; &#x03C7; &#x03C8; &#x03C9; &#x2102; &#x210D; &#x2115; &#x2119;
+      &#x211A; &#x211D; &#x2124; &#x1D47; &#x1D9C; &#x0030; &#x0031; &#x0032; &#x0033;
+      &#x0034; &#x0035; &#x0036; &#x0037; &#x0038; &#x0039; &#x215F; &#x00BD; &#x2189;
+      &#x2153; &#x2154; &#x00BC; &#x00BE; &#x2155; &#x2156; &#x2157; &#x2158; &#x2159;
+      &#x215A; &#x2150; &#x215B; &#x215C; &#x215D; &#x215E; &#x2151; &#x2152; &#x2080;
+      &#x2081; &#x2082; &#x2083; &#x2084; &#x2085; &#x2086; &#x2087; &#x2088; &#x2089;
+      &#x2070; &#x00B9; &#x00B2; &#x00B3; &#x2074; &#x2075; &#x2076; &#x2077; &#x2078;
+      &#x2079; &#x27E8; &#x27E9; &#x002E; &#x002C; &#x003A; &#x003B; &#x2026; &#x0021;
+      &#x00A1; &#x003F; &#x00BF; &#x00B7; &#x2022; &#x002A; &#x203C; &#x0023; &#x2024;
+      &#x002F; &#x005C; &#x2025; &#x002D; &#x2013; &#x2014; &#x005F; &#x208D; &#x208E;
+      &#x0028; &#x0029; &#x007B; &#x007D; &#x005B; &#x005D; &#x2308; &#x230A; &#x2309;
+      &#x230B; &#x207D; &#x207E; &#x201A; &#x201E; &#x201C; &#x201D; &#x2018; &#x2019;
+      &#x201B; &#x00AB; &#x00BB; &#x2039; &#x203A; &#x0022; &#x0027; &#x0192; &#x2605;
+      &#x0040; &#x0026; &#x00B6; &#x00A7; &#x00A9; &#x00AE; &#x2122; &#x00B0; &#x2032;
+      &#x2033; &#x007C; &#x00A6; &#x2113; &#x2020; &#x2021; &#x00A2; &#x00A4; &#x0024;
+      &#x20AC; &#x00A3; &#x00A5; &#x2250; &#x2243; &#x2219; &#x2215; &#x2238; &#x2208;
+      &#x220E; &#x208C; &#x207C; &#x2261; &#x2203; &#x2273; &#x2272; &#x208B; &#x207B;
+      &#x228E; &#x2244; &#x220C; &#x2209; &#x2262; &#x002B; &#x2212; &#x00D7; &#x00F7;
+      &#x003D; &#x2260; &#x003E; &#x003C; &#x2265; &#x2264; &#x00B1; &#x2248; &#x007E;
+      &#x00AC; &#x005E; &#x2205; &#x221E; &#x2227; &#x2228; &#x222B; &#x2206; &#x220F;
+      &#x2211; &#x221A; &#x2202; &#x00B5; &#x2225; &#x0025; &#x2030; &#x208A; &#x207A;
+      &#x2237; &#x225F; &#x22A2; &#x2218; &#x2294; &#x220B; &#x2283; &#x22A4; &#x22A3;
+      &#x2204; &#x2234; &#x2295; &#x2200; &#x22A5; &#x2982; &#x2297; &#x2191; &#x2197;
+      &#x2192; &#x2198; &#x2193; &#x2199; &#x2190; &#x2196; &#x2194; &#x2195; &#x219E;
+      &#x21A0; &#x21D2; &#x21D0; &#x21D4; &#x2581; &#x2582; &#x2583; &#x2584; &#x2585;
+      &#x2586; &#x2587; &#x2588; &#x2580; &#x2594; &#x258F; &#x258E; &#x258D; &#x258C;
+      &#x258B; &#x258A; &#x2589; &#x2590; &#x2595; &#x2596; &#x2597; &#x2598; &#x2599;
+      &#x259A; &#x259B; &#x259C; &#x259D; &#x259E; &#x259F; &#x2591; &#x2592; &#x2593;
+      &#x2566; &#x2557; &#x2554; &#x2550; &#x2569; &#x255D; &#x255A; &#x2551; &#x256C;
+      &#x2563; &#x2560; &#x2565; &#x2556; &#x2553; &#x2530; &#x2512; &#x2527; &#x250E;
+      &#x251F; &#x2541; &#x252F; &#x2511; &#x2529; &#x250D; &#x2521; &#x2547; &#x2564;
+      &#x2555; &#x2552; &#x254D; &#x254F; &#x257B; &#x2533; &#x2513; &#x250F; &#x2501;
+      &#x2578; &#x257E; &#x2509; &#x250B; &#x257A; &#x2505; &#x2507; &#x2579; &#x253B;
+      &#x251B; &#x257F; &#x2517; &#x2503; &#x254B; &#x252B; &#x2523; &#x2545; &#x252D;
+      &#x2535; &#x253D; &#x2532; &#x253A; &#x254A; &#x2543; &#x256E; &#x256D; &#x256F;
+      &#x2570; &#x254C; &#x254E; &#x2573; &#x2572; &#x2571; &#x2577; &#x252C; &#x2510;
+      &#x250C; &#x2574; &#x257C; &#x2508; &#x250A; &#x2576; &#x2504; &#x2506; &#x2575;
+      &#x257D; &#x2534; &#x2518; &#x2514; &#x2502; &#x253C; &#x2524; &#x251C; &#x2546;
+      &#x252E; &#x2536; &#x253E; &#x2531; &#x2539; &#x2549; &#x2544; &#x2500; &#x2568;
+      &#x255C; &#x2559; &#x2540; &#x2538; &#x2526; &#x251A; &#x251E; &#x2516; &#x2548;
+      &#x2537; &#x252A; &#x2519; &#x2522; &#x2515; &#x2567; &#x255B; &#x2558; &#x256B;
+      &#x2562; &#x255F; &#x2542; &#x2528; &#x2520; &#x253F; &#x2525; &#x251D; &#x256A;
+      &#x2561; &#x255E; &#x2665; &#x0323; &#x00A8; &#x02D9; &#x0060; &#x00B4; &#x02DD;
+      &#x02C6; &#x02C7; &#x02D8; &#x02DA; &#x02DC; &#x00AF; &#x00B8; &#x02DB; &#xE0A0;
+      &#xE0A1; &#xE0A2; &#xE0B0; &#xE0B1; &#xE0B2; &#xE0B3;
+    </div>
   </div>
-  </div>
 
-
-  <footer>-- color scheme: <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
-  </footer>
-
-
+  <footer>-- color scheme: <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --</footer>
 </body>
 
 </html>
