removed line break

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         &nbsp;&nbsp;&nbsp;||<br>
         &nbsp;&nbsp;&nbsp;||<br>
         &nbsp;&nbsp;_||_</div><br>
-      his is a universal requirement for source code typography. <br>
-      It's not just a historic artifact from the olden days of terminals, but a useful convention to allow
-      two dimensional structuring and highlighting differences on the character level.<br>
+      his is a universal requirement for source code typography. It's not just a historic artifact from the olden days
+      of terminals, but a useful convention to allow two dimensional structuring and highlighting differences on the
+      character level.<br>
     </div>
   </div>
   <div class="wingdings">¶</div>
